hphp/test/zend/good/ext/calendar/tests/jdtojewish64.php
<?php
$a = array(38245310, 324542846, 324542847, 9223372036854743639);

foreach ($a as $x) var_dump(jdtojewish($x));