hphp/test/zend/bad/list_006.php
<?php

list($a, list($b, list(list($d)))) = array();

?>